--- a/miniprogram-3/pages/forget/forget.wxss
+++ b/miniprogram-3/pages/forget/forget.wxss
@@ -1,4 +1,4 @@
-/* pages/userRegist/userRegist.wxss */
+/* pages/foget/forget.wxss *//* pages/userRegist/userRegist.wxss */
 
 page {
   background-color: white;
