--- a/miniprogram-3/pages/userRegist/userRegist.wxml
+++ b/miniprogram-3/pages/userRegist/userRegist.wxml
@@ -1,26 +1,58 @@
 <view>
-
-  <view class="login-icon">
-    <image class="login-img" src="../resouce/user.png"></image>
-  </view>
   <view class="login-form">
     <form bindsubmit="doRegist">
       <view class="inputView">
-        <image class="nameImage" src="../resouce/login.png"></image>
-        <label class="loginLable">账号</label>
-        <input name="username" class="inputText" placeholder="请输入账号"/>
+        <input name="uid" class="inputText" type="number" placeholder="学号(必填)"/>
+      </view>
+     <view class="line"></view>
+      <view class="inputView">
+        
+        <input name="password" class="inputText" password="true" placeholder="密码(必填)" bindblur="passinput"/>
+      </view>
+     <view class="line"></view>
+      <view class="inputView">
+        <input class="inputText" password="true" placeholder="确认密码" bindblur="jpassword"/>
       </view>
       <view class="line"></view>
       <view class="inputView">
-        <image class="keyImage" src="../resouce/password.png"></image>
-        <label class="loginLable">密码</label>
-        <input name="password" class="inputText" password="true" placeholder="请输入密码"/>
+      <label class="loginLable">性别</label>
+        <radio-group class="radio-group" bindchange="radioChange">
+          <label class="radio" wx:for="{{items}}">
+              <radio value="{{item.value}}" checked="{{item.checked}}"/>{{item.name}}
+          </label>
+      </radio-group>
+      </view>
+      <view class="line"></view>
+     <view class="inputView">
+      <input name="school" class="inputText"  placeholder="学校（必填）"/>
+      </view>
+      <view class="line"></view>
+      <view class="inputView">   
+        <input name="phone" class="inputText" bindinput="inputPhoneNum" maxlength="11" type="number"  placeholder="电话（必填）"/>
+      </view>
+     <view class="line"></view>
+      <view class="inputView">
+        
+        <input name="email" class="inputText" bindchange="inputemail"  placeholder="邮箱（必填，找回密码用）"/>
+         
+      </view>
+      <view class="line"></view>
+   
+      <view class="inputView">
+        <input bindinput="inputTel" maxlength="6"  placeholder="请输入验证码" class="inputText"></input>
+        <button bindtap="sendCode" disabled="{{smsFlag}}" style='margin-top:20px;margin-right:10rpx;color:{{sendColor}};font-size:28rpx'>{{sendTime}}</button>
+      </view>
+
+      <view class="line"></view>
+   
+
+      
+     
+      <view>
+        <button style="width:70vw " class="loginBtn"  form-type='submit'>注册</button>
       </view>
       <view>
-        <button class="loginBtn" type="primary" form-type='submit'>注册</button>
-      </view>
-      <view>
-        <button class="goLoginBtn" type="warn" bindtap="goLoginBtn">返回</button>
+        <button style="width:70vw " class="goLoginBtn"  bindtap="goLoginBtn">返回</button>
       </view>
     </form>
   </view>
