--- a/miniprogram-3/pages/Mytest/Mytest.wxss
+++ b/miniprogram-3/pages/Mytest/Mytest.wxss
@@ -1,12 +1,13 @@
 /* pages/mytest/Mytest.wxss */
 Page {
   font-size: 14px;
+  
 }
 
 .top {
   width: 100%;
-  height: 140px;
-  background: rgb(19, 17, 17);
+  height: 360rpx;
+  background: rgb(240, 122, 12);
   padding-top: 15px;
   position: relative;
 }
@@ -19,6 +20,7 @@ Page {
   flex-direction: column;
   margin: 0 auto;
   border-radius: 5px;
+  margin-top: 120rpx;
 }
 
 .center_top {
