--- a/miniprogram-3/pages/playground2/playground2.wxss
+++ b/miniprogram-3/pages/playground2/playground2.wxss
@@ -1,9 +1,13 @@
-/* pages/playground2/playground2.wxss */
+page{
+  background-color: rgb(247, 242, 242);
+}
 .swiper-tab{  
   width: 100%;  
-  border-bottom: 4rpx solid  #DDDDDD;  
+   background-color:white;
   text-align: center;  
   line-height: 80rpx;
+  border-top: 1rpx solid  #DDDDDD; 
+  flex: 0 0 100rpx;
 }  
 .swiper-tab-list{  font-size: 30rpx;  
     display: inline-block;  
@@ -28,61 +32,65 @@
   width: 22%;
 }
  
-.full-image{
-  width:80px;
-  height:80px;
-  margin:13px;
-  border-radius: 50px;
-}
-.page-xx{
-  display:flex;
-  flex-direction:row;
-}
-.xx-text-title{
-  text-align: center;
-  margin: 10px;
-  width: 85%;
-}
-.text-title{
-  font-size:20px;
-  font-weight: bold;
-  color:rgb(51, 20, 20);
-}
+
 .page_card{
 
   margin:20rpx 0 20rpx 0;
   border-bottom: 6rpx solid  #DDDDDD;  
 }
- 
-.jian-text
-{
- font-size:16px;
- text-align: left;
+
+
+.itemtitle{
+  margin-top: 30rpx;
+  font-size: 30rpx;
+  font-family: SimHei;
+  margin-left: 30rpx;
+  justify-content: space-between;
 }
- 
-.btn{
+.time{
+  margin-top: 20rpx;
+  margin-bottom: 10rpx;
+  margin-left: 30rpx;
+  font-size: 25rpx;
+  color: rgb(179, 176, 176);
+}
+.img1{
+  border-top-left-radius: 10rpx;
+  border-top-right-radius: 10rpx;
+  width: 100%;
+  height:100%;
+}
+.main{
+  flex: 1;
+  position: relative;
+}
+
+.main-scroll{
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+.card{
+  width: 47vw;
+  margin-top: 10rpx;
+  margin-bottom: 10rpx;
+  background-color: white;
+  border-radius: 5px;
+}
+
+.card-box{
+  width: 100%;
+  height: 200rpx;
+  border-radius: 6rpx;
+}
+
+.main-list{
   display: flex;
-}
-.btn-wx{
-  display: flex;
-  font-size:14px;
-  background-color:#4a66c2;
-}
-.btn-call{
-  display: flex;
-  align-items: center;
-  font-size:14px;
-  background-color:#e67c61;
-}
-.text-context{
-  font-size: 12px;
-}
-.numView{
-  margin-top:15rpx;
-  margin-left: 10rpx;
-}
-.number{
-  font-weight: bold;
-  font-size: 20px;
-  color: rgb(161, 155, 155);
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-left: 2vw;
+  margin-right: 2vw;
+  background: rgb(245, 239, 239);
 }
